k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: comunidad
spec:
  # type: LoadBalancer
  type: ClusterIP
  selector:
    app: webapp
  ports:
    - port: 80
      targetPort: 5000
