k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
  namespace: comunidad
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: webapp.comunidad.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp
            port:
              number: 80
